--- a/html/home.html
+++ b/html/home.html
@@ -65,18 +65,30 @@
     </div>
 
     <main class="conteudo">
-        <section class="conteudo-principal">
-            <div class="conteudo-texto">
-                <h1 class="titulo-secao-um">Bermuda X</h1>
-                <h2 class="subtitulo-secao-um">Vista-se bem</h2>
-                <button class="botao-um">Compre já!</button>
+        <div class="slider">
+            <div class="slides">
+
+                <input type="radio" name="radio-btn" id="radio1">
+                <input type="radio" name="radio-btn" id="radio2">
+                <input type="radio" name="radio-btn" id="radio3">
+
+                <div class="slide">
+                    <img src="/Caltech/imagens/Camisa/big-bang-theory-1.jpeg">
+                </div>
+                <div class="slide">
+                    <img src="/Caltech/imagens/Acessórios/pelucia-star-wars(frente).jpg">
+                </div>
+                <div class="slide">
+                    <img src="/Caltech/imagens/Moletom/cropped-harry-potter-1.jpeg">
+                </div>
             </div>
-            <img class="imagem-produto-meio" />
-        </section>
-        <section class="conteudo-secundario">
-            <p class="conteudo-secundario-parag">descrição do produto</p>
-            <p class="conteudo-secundario-parag">piriri</p>
-        </section>
+            <div class="navigation-bar">
+                <label for="radio1">Botão 1</label>
+                <label for="radio2">Botão 2</label>
+                <label for="radio3">Botão 3</label>
+                <label for="radio4">Botão 4 </label>
+            </div>
+        </div>
     </main>
     <footer class="rodape">
         <img class="rodape-imagem" />
