--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -62,93 +62,73 @@
     </div>
   </header>
 
-  <div class="conteudo bg-img">
-    <div id="conteudo-form">
-      <div id="contain">
-        <div id="wrapper">
-          <div class="form">
-            <form action="pagina2.html">
-              <div class="form-group">
-                <label for="nome">Nome: </label>
-                <input type="text" name="nome" size="70" placeholder="Nome completo..." />
-              </div>
-              <div class="form-group">
-                <label for="cpf">CPF: </label>
-                <input type="text" name="cpf" size="11" required placeholder="xxx.xxx.xxx-xx"
-                  pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}" />
-              </div>
-              <div class="form-group">
-                <label for="email">E-mail: </label>
-                <input type="email" name="email" size="20" placeholder="email@dominio.com" />
-              </div>
-              <label for="sexo" id="sexo">Sexo:
-                <div class="form-group">
-                  <div class="form-group-radio">
-                    <input type="radio" name="sexo" class="radio" id="masculino" value="masculino" checked="checked" />
-                    <label for>Masculino</label>
-                  </div>
-                  <div class="form-group-radio">
-                    <input class="radio" id="feminino" type="radio" name="sexo" value="feminino" />
-                    <label for="feminino">Feminino</label>
-                  </div>
-                </div>
-              </label>
-              <div class="form-group">
-                <label for="date">Data de Nascimento: </label>
-                <input type="date" maxlength="10" name="date" pattern="[0-9]{2}\[0-9]{2}\[0-9]{4}$" min="2012-01-01"
-                  max="2030-02-18" />
-              </div>
-              <div class="form-group">
-                <label for="estado-civil">Estado Civil: </label>
-                <select name="Estado Civil" id="estado-civil">
-                  <option value="Solteiro">Solteiro</option>
-                  <option value="Casado">Casado</option>
-                  <option value="Divorciado">Divorciado</option>
-                  <option value="viuvo">Viúvo</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="endereço">Endereço: </label>
-                <input type="text" id="endereço" name="endereço" placeholder="Rua, Cidade - UF" pattern="[a-z\s]+$" />
-                <input type="number" name="cep" size="8" required placeholder="CEP: xxxxx-xxx"
-                  pattern="[0-9]{5}-[0-9]{3}" />
-              </div>
-              <div class="form-group">
-                <label for="profissao">Profissão: </label>
-                <input type="text" id="profissao" name="letras" placeholder="Estilista" pattern="[a-z\s]+$" />
-              </div>
-              <div class="form-group">
-                <label for="letras">Apenas Letras: </label>
-                <input type="text" id="letras" name="letras" placeholder="somente letras...." pattern="[a-z\s]+$" />
-              </div>
-              <div class="form-group">
-                <label for="phone">Telefone: </label>
-                <input type="tel" id="phone" name="phone" required placeholder="(xx) xxxxx-xxxx"
-                  pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{4}" />
-              </div>
-              <div class="form-group">
-                <label for="obs">Observação:</label>
-                <textarea name="obs" id="obs" cols="30" rows="4" required placeholder="Faça sua observação"></textarea>
-              </div>
+  <main class="conteudo bg-img">
+    <div align="center" id="conteudo-form">
+      <form action="pagina2.html" class="form-cadastro">
+        <div class="form-inline">
+          <label for="nome">Nome: </label>
+          <input type="text" name="nome" size="70" placeholder="Nome completo..." />
 
-              <div class="full-width">
-                <button type="submit" class="btn">Criar Conta</button>
-              </div>
-            </form>
-          </div>
+          <label for="cpf">CPF: </label>
+          <input type="text" name="cpf" size="15" required placeholder="xxx.xxx.xxx-xx"
+            pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}" />
+
+          <label for="email">E-mail: </label>
+          <input type="email" name="email" size="20" placeholder="email@dominio.com" />
         </div>
-      </div>
+
+        <div class="form-inline">
+          <label for="sexo" id="form-inline">Sexo: </label>
+          <input type="radio" name="sexo" value="masculino" checked="checked">Masculino
+          <input type="radio" name="sexo" value="feminino">Feminino<br>
+        </div>
+
+        <div class="form-inline">
+          <label for="date">Data de Nascimento: </label>
+          <input type="date" maxlength="10" name="date" pattern="[0-9]{2}\[0-9]{2}\[0-9]{4}$" min="2012-01-01"
+            max="2014-02-18" />
+
+          <label for="estado-civil">Estado Civil: </label>
+          <select name="Estado Civil" id="estado-civil">
+            <option value="Solteiro">Solteiro</option>
+            <option value="Casado">Casado</option>
+            <option value="Divorciado">Divorciado</option>
+            <option value="viuvo">Viúvo</option>
+          </select>
+        </div>
+
+        <label for="endereço">Endereço: </label>
+        <div class="form-inline">
+          <input type="text" id="endereço" name="endereço" placeholder="Rua, Cidade - UF" pattern="[a-z\s]+$" />
+          <input type="number" name="cep" size="8" required placeholder="CEP: xxxxx-xxx" pattern="[0-9]{5}-[0-9]{3}" />
+        </div>
+
+        <label for="profissao">Profissão: </label>
+        <input type="text" id="profissao" name="letras" placeholder="Estilista" pattern="[a-z\s]+$" />
+
+        <label for="letras">Apenas Letras: </label>
+        <input type="text" id="letras" name="letras" placeholder="somente letras...." pattern="[a-z\s]+$" />
+
+        <label for="phone">Telefone: </label>
+        <input type="tel" id="phone" name="phone" required placeholder="(xx) xxxxx-xxxx"
+          pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{4}" />
+
+        <label for="obs">Observação:</label>
+        <input name="obs" id="obs" required placeholder="Faça sua observação"></input>
+
+        <button type="submit" class="btn">Criar Conta</button>
+
+      </form>
     </div>
-  </div>
+  </main>
 
   <footer class="rodape">
     <!--rodapé nao sei oq vou por aqui-->
-    <img class="rodape-imagem" />
+    <img class="rodape-imagem">
     <!--logo e tals-->
     <section class="rodape-info">
-      <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
-        Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N - CEP
-        29500-000 - Alegre - ES</small>
+      <p><small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos Têxteis Ltda - CNPJ:
+          24.907.279/2007-19 Alto Universitário, S/N - CEP 29500-000 - Alegre - ES</small></p>
     </section>
   </footer>
 </body>
