--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -39,7 +39,7 @@
             <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
                 class="img-btn" /></span>
             <div class="dropdown-content">
-              <a href="cadastro.html">Fale Conosco</a>
+              <a href="faleConosco.html">Fale Conosco</a>
             </div>
           </div>
         </div>
@@ -62,7 +62,7 @@
     </div>
   </header>
 
-  <main class="conteudo bg-img">
+  <main class="conteudo" id="bg-img">
     <div align="center" id="conteudo-form">
       <form action="pagina2.html" class="form-cadastro">
         <div class="form-inline">
