--- a/html/camisas.html
+++ b/html/camisas.html
@@ -2,213 +2,213 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Caltech Wear</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/cards.css" />
-  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
-    rel="stylesheet" />
+    <meta charset="utf-8" />
+    <title>Caltech Wear</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/cards.css" />
+    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+        rel="stylesheet" />
 </head>
 
 <body>
-  <header id="cabeçalho">
-    <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
-    <!--logo da caltech-->
-    <div class="hamburguer">
-      <nav class="cabeçalho-menu">
-        <!--menu-->
-        <ul>
-          <li>
-            <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
-          </li>
-          <li>
-            <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
-          </li>
-          <li>
-            <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
-          </li>
-          <li>
-            <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
-          </li>
-        </ul>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="faleConosco.html">Fale Conosco</a>
-            </div>
-          </div>
+    <header id="cabeçalho">
+        <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
+        <!--logo da caltech-->
+        <div class="hamburguer">
+            <nav class="cabeçalho-menu">
+                <!--menu-->
+                <ul>
+                    <li>
+                        <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
+                    </li>
+                    <li>
+                        <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
+                    </li>
+                    <li>
+                        <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
+                    </li>
+                    <li>
+                        <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
+                    </li>
+                </ul>
+                <div class="cabeçalho-menu-item">
+                    <div class="dropdown">
+                        <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
+                                class="img-btn" /></span>
+                        <div class="dropdown-content">
+                            <a href="faleConosco.html">Fale Conosco</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="cabeçalho-menu-item">
+                    <a href="carrinho.html">
+                        <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
+                    </a>
+                </div>
+                <div class="cabeçalho-menu-item">
+                    <div class="dropdown">
+                        <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta"
+                                style="width: 25px" class="img-btn" /></span>
+                        <div class="dropdown-content">
+                            <a href="#">Login</a>
+                            <a href="cadastro.html">Cadastrar-se</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class="cabeçalho-menu-item">
-          <a href="carrinho.html">
-            <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
-          </a>
+    </header>
+
+    <div class="img-banner">
+        <img src="../imagens/Capas/coleção-geek.jpg" alt="Sessão Geek" />
+    </div>
+
+    <main class="conteudo">
+        <!-- CARD CAMISAS -->
+        <div class="card">
+            <img src="../imagens/Camisa/acdc.jpg" alt="Camisa AC/DC" style="width:100%">
+            <h1>Camisa AC/DC</h1>
+            <p class="preco">R$ 49,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
         </div>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="#">Login</a>
-              <a href="cadastro.html">Cadastrar-se</a>
-            </div>
-          </div>
+
+        <div class="card">
+            <img src="../imagens/Camisa/nirvana.jpeg" alt="Camisa Nirvana" style="width:100%">
+            <h1>Camisa Nirvana</h1>
+            <p class="preco">R$ 69,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
         </div>
-      </nav>
-    </div>
-  </header>
 
-  <div class="img-banner">
-    <img src="../imagens/Capas/coleção-geek.jpg" alt="Sessão Geek" />
-  </div>
+        <div class="card">
+            <img src="../imagens/Camisa/stone-temple-pilots.jpg" alt="Camisa Stone Temple Pilots" style="width:100%">
+            <h1>Camisa Stone Temple Pilots</h1>
+            <p class="preco">R$ 59,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-  <main class="conteudo">
-    <!-- CARD CAMISAS -->
-    <div class="card">
-      <img src="../imagens/Camisa/acdc.jpg" alt="Camisa AC/DC" style="width:100%">
-      <h1>Camisa AC/DC</h1>
-      <p class="preco">R$ 49,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/guns-n-roses.jpg" alt="Camisa Guns'n'Roses" style="width:100%">
+            <h1>Camisa Guns'n'Roses</h1>
+            <p class="preco">R$ 72,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/nirvana.jpeg" alt="Camisa Nirvana" style="width:100%">
-      <h1>Camisa Nirvana</h1>
-      <p class="preco">R$ 69,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/flash.jpg" alt="Camisa Flash" style="width:100%">
+            <h1>Camisa Flash</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/stone-temple-pilots.jpg" alt="Camisa Stone Temple Pilots" style="width:100%">
-      <h1>Camisa Stone Temple Pilots</h1>
-      <p class="preco">R$ 59,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/lanterna-verde.jpg" alt="Camisa Lanterna Verde" style="width:100%">
+            <h1>Camisa Lanterna Verde</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/guns-n-roses.jpg" alt="Camisa Guns'n'Roses" style="width:100%">
-      <h1>Camisa Guns'n'Roses</h1>
-      <p class="preco">R$ 72,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/sonic.jpg" alt="Camisa Sonic" style="width:100%">
+            <h1>Camisa Sonic</h1>
+            <p class="preco">R$ 54,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/flash.jpg" alt="Camisa Flash" style="width:100%">
-      <h1>Camisa Flash</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/star-wars-1.jpg" alt="Camisa Star Wars" style="width:100%">
+            <h1>Camisa Star Wars</h1>
+            <p class="preco">R$ 58,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/lanterna-verde.jpg" alt="Camisa Lanterna Verde" style="width:100%">
-      <h1>Camisa Lanterna Verde</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/star-wars.jpg" alt="Camisa Star Wars" style="width:100%">
+            <h1>Camisa Star Wars</h1>
+            <p class="preco">R$ 59,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/sonic.jpg" alt="Camisa Sonic" style="width:100%">
-      <h1>Camisa Sonic</h1>
-      <p class="preco">R$ 54,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/demon-slayer.jpg" alt="Camisa Demon Slayer" style="width:100%">
+            <h1>Camisa Demon Slayer</h1>
+            <p class="preco">R$ 62,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/star-wars-1.jpg" alt="Camisa Star Wars" style="width:100%">
-      <h1>Camisa Star Wars</h1>
-      <p class="preco">R$ 58,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/dragon-ball.jpg" alt="Camisa Dragon Ball" style="width:100%">
+            <h1>Camisa Dragon Ball</h1>
+            <p class="preco">R$ 58,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/star-wars.jpg" alt="Camisa Star Wars" style="width:100%">
-      <h1>Camisa Star Wars</h1>
-      <p class="preco">R$ 59,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/big-bang-theory.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
+            <h1>Camisa The Big Bang Theory</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/demon-slayer.jpg" alt="Camisa Demon Slayer" style="width:100%">
-      <h1>Camisa Demon Slayer</h1>
-      <p class="preco">R$ 62,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/big-bang-theory-1.jpeg" alt="Camisa The Big Bang Theory" style="width:100%">
+            <h1>Camisa The Big Bang Theory</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/dragon-ball.jpg" alt="Camisa Dragon Ball" style="width:100%">
-      <h1>Camisa Dragon Ball</h1>
-      <p class="preco">R$ 58,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/big-bang-theory-2.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
+            <h1>Camisa The Big Bang Theory</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/big-bang-theory.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
-      <h1>Camisa The Big Bang Theory</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/big-bang-theory-3.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
+            <h1>Camisa The Big Bang Theory</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Camisa/big-bang-theory-1.jpeg" alt="Camisa The Big Bang Theory" style="width:100%">
-      <h1>Camisa The Big Bang Theory</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Camisa/big-bang-theory-4.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
+            <h1>Camisa The Big Bang Theory</h1>
+            <p class="preco">R$ 67,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
+    </main>
 
-    <div class="card">
-      <img src="../imagens/Camisa/big-bang-theory-2.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
-      <h1>Camisa The Big Bang Theory</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-
-    <div class="card">
-      <img src="../imagens/Camisa/big-bang-theory-3.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
-      <h1>Camisa The Big Bang Theory</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-
-    <div class="card">
-      <img src="../imagens/Camisa/big-bang-theory-4.jpg" alt="Camisa The Big Bang Theory" style="width:100%">
-      <h1>Camisa The Big Bang Theory</h1>
-      <p class="preco">R$ 67,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-  </main>
-
-  <footer class="rodape">
-    <!--rodapé nao sei oq vou por aqui-->
-    <img class="rodape-imagem" />
-    <!--logo e tals-->
-    <section class="rodape-info">
-      <p>
-        <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
-          Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
-          CEP 29500-000 - Alegre - ES</small>
-      </p>
-    </section>
-  </footer>
+    <footer class="rodape">
+        <!--rodapé nao sei oq vou por aqui-->
+        <img class="rodape-imagem" />
+        <!--logo e tals-->
+        <section class="rodape-info">
+            <p>
+                <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
+                    Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
+                    CEP 29500-000 - Alegre - ES</small>
+            </p>
+        </section>
+    </footer>
 </body>
 
 </html>
