--- a/html/moletom.html
+++ b/html/moletom.html
@@ -2,245 +2,247 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Caltech Wear</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
-  <link rel="stylesheet" type="text/css" media="screen" href="../css/cards.css" />
-  <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
-    rel="stylesheet" />
+    <meta charset="utf-8" />
+    <title>Caltech Wear</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/cards.css" />
+    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
+        rel="stylesheet" />
 </head>
 
 <body>
-  <header id="cabeçalho">
-    <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
-    <!--logo da caltech-->
-    <div class="hamburguer">
-      <nav class="cabeçalho-menu">
-        <!--menu-->
-        <ul>
-          <li>
-            <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
-          </li>
-          <li>
-            <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
-          </li>
-          <li>
-            <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
-          </li>
-          <li>
-            <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
-          </li>
-        </ul>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="faleConosco.html">Fale Conosco</a>
-            </div>
-          </div>
+    <header id="cabeçalho">
+        <a href="home.html"><img class="imagem-cabeçalho" src="../imagens/logo.png" /></a>
+        <!--logo da caltech-->
+        <div class="hamburguer">
+            <nav class="cabeçalho-menu">
+                <!--menu-->
+                <ul>
+                    <li>
+                        <a href="acessorios.html" class="cabeçalho-menu-item">Acessórios</a>
+                    </li>
+                    <li>
+                        <a href="camisas.html" class="cabeçalho-menu-item">Camisas</a>
+                    </li>
+                    <li>
+                        <a href="moletom.html" class="cabeçalho-menu-item">Moletom</a>
+                    </li>
+                    <li>
+                        <a href="calcas.html" class="cabeçalho-menu-item">Calças</a>
+                    </li>
+                </ul>
+                <div class="cabeçalho-menu-item">
+                    <div class="dropdown">
+                        <span class="dropbtn"><img src="../imagens/suporte.png" alt="suporte" style="width: 25px"
+                                class="img-btn" /></span>
+                        <div class="dropdown-content">
+                            <a href="faleConosco.html">Fale Conosco</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="cabeçalho-menu-item">
+                    <a href="carrinho.html">
+                        <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
+                    </a>
+                </div>
+                <div class="cabeçalho-menu-item">
+                    <div class="dropdown">
+                        <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta"
+                                style="width: 25px" class="img-btn" /></span>
+                        <div class="dropdown-content">
+                            <a href="#">Login</a>
+                            <a href="cadastro.html">Cadastrar-se</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class="cabeçalho-menu-item">
-          <a href="carrinho.html">
-            <img src="../imagens/carrinho.png" alt="Carrinho" style="width: 25px" class="img-btn" />
-          </a>
+    </header>
+
+    <div class="img-banner">
+        <img src="../imagens/Capas/colecao-stranger-things.jpg" alt="Sessão Geek" />
+    </div>
+
+    <main class="conteudo">
+        <div class="card">
+            <img src="../imagens/Moletom/nirvana.jpg" alt="Moletom Nirvana" style="width:100%">
+            <h1>Moletom Nirvana</h1>
+            <p class="preco">R$ 125,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
         </div>
-        <div class="cabeçalho-menu-item">
-          <div class="dropdown">
-            <span class="dropbtn"><img src="../imagens/user-icon.png" alt="Acessar Conta" style="width: 25px"
-                class="img-btn" /></span>
-            <div class="dropdown-content">
-              <a href="#">Login</a>
-              <a href="cadastro.html">Cadastrar-se</a>
-            </div>
-          </div>
+
+        <div class="card">
+            <img src="../imagens/Moletom/queen.jpg" alt="Moletom Queen" style="width:100%">
+            <h1>Moletom Queen</h1>
+            <p class="preco">R$ 132,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
         </div>
-      </nav>
-    </div>
-  </header>
 
-  <div class="img-banner">
-    <img src="../imagens/Capas/colecao-stranger-things.jpg" alt="Sessão Geek" />
-  </div>
+        <div class="card">
+            <img src="../imagens/Moletom/batman.jpeg" alt="Moletom Batman" style="width:100%">
+            <h1>Moletom Batman</h1>
+            <p class="preco">R$ 117,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-  <main class="conteudo">
-    <div class="card">
-      <img src="../imagens/Moletom/nirvana.jpg" alt="Moletom Nirvana" style="width:100%">
-      <h1>Moletom Nirvana</h1>
-      <p class="preco">R$ 125,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/homem-aranha.jpg" alt="Moletom Homem-Aranha" style="width:100%">
+            <h1>Moletom Homem-Aranha</h1>
+            <p class="preco">R$ 129,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/queen.jpg" alt="Moletom Queen" style="width:100%">
-      <h1>Moletom Queen</h1>
-      <p class="preco">R$ 132,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/snes.jpg" alt="Moletom Super Nintendo" style="width:100%">
+            <h1>Moletom Super Nintendo</h1>
+            <p class="preco">R$ 127,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/batman.jpeg" alt="Moletom Batman" style="width:100%">
-      <h1>Moletom Batman</h1>
-      <p class="preco">R$ 117,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/strange-things.jpg" alt="Moletom Strange Things" style="width:100%">
+            <h1>Moletom Stranger Things</h1>
+            <p class="preco">R$ 129,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/homem-aranha.jpg" alt="Moletom Homem-Aranha" style="width:100%">
-      <h1>Moletom Homem-Aranha</h1>
-      <p class="preco">R$ 129,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/cropped-strange-things.jpeg" alt="Cropped Strange Things" style="width:100%">
+            <h1>Cropped Stranger Things</h1>
+            <p class="preco">R$ 117,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/snes.jpg" alt="Moletom Super Nintendo" style="width:100%">
-      <h1>Moletom Super Nintendo</h1>
-      <p class="preco">R$ 127,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/strange-things-conjunto.jpeg" alt="Conjunto Moletom Strange Things"
+                style="width:100%">
+            <h1>Conjunto Stranger Things</h1>
+            <p class="preco">R$ 224,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/strange-things.jpg" alt="Moletom Strange Things" style="width:100%">
-      <h1>Moletom Stranger Things</h1>
-      <p class="preco">R$ 129,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/cropped-harry-potter-1.jpeg" alt="Cropped Harry Potter Cinza"
+                style="width:100%">
+            <h1>Cropped Harry Potter Cinza</h1>
+            <p class="preco">R$ 114,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/cropped-strange-things.jpeg" alt="Cropped Strange Things" style="width:100%">
-      <h1>Cropped Stranger Things</h1>
-      <p class="preco">R$ 117,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/cropped-harry-potter.jpeg" alt="Cropped Harry Potter" style="width:100%">
+            <h1>Cropped Harry Potter</h1>
+            <p class="preco">R$ 114,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/strange-things-conjunto.jpeg" alt="Conjunto Moletom Strange Things"
-        style="width:100%">
-      <h1>Conjunto Stranger Things</h1>
-      <p class="preco">R$ 224,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/dragon-ball.jpg" alt="Moletom Dragon Ball" style="width:100%">
+            <h1>Moletom Dragon Ball</h1>
+            <p class="preco">R$ 137,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/cropped-harry-potter-1.jpeg" alt="Cropped Harry Potter Cinza" style="width:100%">
-      <h1>Cropped Harry Potter Cinza</h1>
-      <p class="preco">R$ 114,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/naruto.jpg" alt="Moletom Naruto - Akatsuki" style="width:100%">
+            <h1>Moletom Naruto - Akatsuki</h1>
+            <p class="preco">R$ 142,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/cropped-harry-potter.jpeg" alt="Cropped Harry Potter" style="width:100%">
-      <h1>Cropped Harry Potter</h1>
-      <p class="preco">R$ 114,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/one-piece.jpg" alt="Moletom One Piece" style="width:100%">
+            <h1>Moletom One Piece</h1>
+            <p class="preco">R$ 139,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/dragon-ball.jpg" alt="Moletom Dragon Ball" style="width:100%">
-      <h1>Moletom Dragon Ball</h1>
-      <p class="preco">R$ 137,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/tokyo-revengers.jpg" alt="Moletom Tokyo Revengers" style="width:100%">
+            <h1>Moletom Tokyo Revengers - Mike</h1>
+            <p class="preco">R$ 142,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/naruto.jpg" alt="Moletom Naruto - Akatsuki" style="width:100%">
-      <h1>Moletom Naruto - Akatsuki</h1>
-      <p class="preco">R$ 142,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/the-big-bang-theory.jpg" alt="Moletom The Big Bang Theory" style="width:100%">
+            <h1>Moletom The Big Bang Theory</h1>
+            <p class="preco">R$ 144,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/one-piece.jpg" alt="Moletom One Piece" style="width:100%">
-      <h1>Moletom One Piece</h1>
-      <p class="preco">R$ 139,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/the-big-bang-theory-1.jpeg" alt="Moletom The Big Bang Theory"
+                style="width:100%">
+            <h1>Moletom The Big Bang Theory</h1>
+            <p class="preco">R$ 137,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/tokyo-revengers.jpg" alt="Moletom Tokyo Revengers" style="width:100%">
-      <h1>Moletom Tokyo Revengers - Mike</h1>
-      <p class="preco">R$ 142,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/star-wars.jpeg" alt="Moletom Star Wars - the Dark Side" style="width:100%">
+            <h1>Moletom Star Wars - Dark Side</h1>
+            <p class="preco">R$ 132,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/the-big-bang-theory.jpg" alt="Moletom The Big Bang Theory" style="width:100%">
-      <h1>Moletom The Big Bang Theory</h1>
-      <p class="preco">R$ 144,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/star-wars-1.jpg" alt="Moletom Star Wars" style="width:100%">
+            <h1>Moletom Star Wars</h1>
+            <p class="preco">R$ 135,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/the-big-bang-theory-1.jpeg" alt="Moletom The Big Bang Theory" style="width:100%">
-      <h1>Moletom The Big Bang Theory</h1>
-      <p class="preco">R$ 137,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/star-wars-2.jpg" alt="Moletom Star Wars Cinza Chumbo" style="width:100%">
+            <h1>Moletom Star Wars - Stormtroppers</h1>
+            <p class="preco">R$ 132,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
 
-    <div class="card">
-      <img src="../imagens/Moletom/star-wars.jpeg" alt="Moletom Star Wars - the Dark Side" style="width:100%">
-      <h1>Moletom Star Wars - Dark Side</h1>
-      <p class="preco">R$ 132,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
+        <div class="card">
+            <img src="../imagens/Moletom/star-wars-conjunto.jpg" alt="Conjunto Moletom Star Wars" style="width:100%">
+            <h1>Conjunto Star Wars</h1>
+            <p class="preco">R$ 247,99</p>
+            <p class="descricao">Algodão 100%</p>
+            <p><button>Adicionar ao Carrinho</button></p>
+        </div>
+    </main>
 
-    <div class="card">
-      <img src="../imagens/Moletom/star-wars-1.jpg" alt="Moletom Star Wars" style="width:100%">
-      <h1>Moletom Star Wars</h1>
-      <p class="preco">R$ 135,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-
-    <div class="card">
-      <img src="../imagens/Moletom/star-wars-2.jpg" alt="Moletom Star Wars Cinza Chumbo" style="width:100%">
-      <h1>Moletom Star Wars - Stormtroppers</h1>
-      <p class="preco">R$ 132,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-
-    <div class="card">
-      <img src="../imagens/Moletom/star-wars-conjunto.jpg" alt="Conjunto Moletom Star Wars" style="width:100%">
-      <h1>Conjunto Star Wars</h1>
-      <p class="preco">R$ 247,99</p>
-      <p class="descricao">Algodão 100%</p>
-      <p><button>Adicionar ao Carrinho</button></p>
-    </div>
-  </main>
-
-  <footer class="rodape">
-    <!--rodapé nao sei oq vou por aqui-->
-    <img class="rodape-imagem" />
-    <!--logo e tals-->
-    <section class="rodape-info">
-      <p>
-        <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
-          Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
-          CEP 29500-000 - Alegre - ES</small>
-      </p>
-    </section>
-  </footer>
+    <footer class="rodape">
+        <!--rodapé nao sei oq vou por aqui-->
+        <img class="rodape-imagem" />
+        <!--logo e tals-->
+        <section class="rodape-info">
+            <p>
+                <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
+                    Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
+                    CEP 29500-000 - Alegre - ES</small>
+            </p>
+        </section>
+    </footer>
 </body>
 
 </html>
