Corrigindo os forms

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -73,7 +73,7 @@
                     <input type="text" name="cpf" size="15" required placeholder="xxx.xxx.xxx-xx"
                         pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}" />
 
-                    <label for="email">E-mail: </label>
+                    <label for="email">Email: </label>
                     <input type="email" name="email" size="20" placeholder="email@dominio.com" />
                 </div>
 
