--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -6,6 +6,7 @@
     <title>Caltech Wear</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/styleForm.css" />
     <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
@@ -60,66 +61,40 @@
             </nav>
         </div>
     </header>
+
+    <main class="conteudo" id="bg-img">
+        <div align="center" id="conteudo-form">
+            <form action="pagina2.html" class="form-cadastro">
+                <div class="form-inline">
+                    <label for="email">Email: </label>
+                    <input type="email" name="email" size="20" placeholder="email@dominio.com" />
+
+                    <label for="nome">Assunto: </label>
+                    <input type="text" name="Assunto" size="70" placeholder="Assunto do email" />
+                </div>
+
+                <label for="mensagem">Digite sua mensagem:</label>
+                <input name="mensagem" id="mensagem" required placeholder="Mensagem..."></input>
+
+                <div class="form-inline">
+                    <button type="submit" class="btn">Enviar Mensagem</button>
+                    <button type="reset" class="btn">Apagar Campos</button>
+                </div>
+
+            </form>
+        </div>
+    </main>
+    <footer class="rodape">
+        <img class="rodape-imagem" />
+        <!--logo e tals-->
+        <section class="rodape-info">
+            <p>
+                <small>© 2022 Caltech. Todos os direitos reservados. Comércio de Produtos
+                    Têxteis Ltda - CNPJ: 24.907.279/2007-19 Alto Universitário, S/N -
+                    CEP 29500-000 - Alegre - ES</small>
+            </p>
+        </section>
+    </footer>
 </body>
-<main class="conteudo" id="bg-img">
-    <div align="center" id="conteudo-form">
-        <form action="pagina2.html" class="form-cadastro">
-            <div class="form-inline">
-                <label for="nome">Nome: </label>
-                <input type="text" name="nome" size="70" placeholder="Nome completo..." />
-
-                <label for="cpf">CPF: </label>
-                <input type="text" name="cpf" size="15" required placeholder="xxx.xxx.xxx-xx"
-                    pattern="[0-9]{3}.[0-9]{3}.[0-9]{3}-[0-9]{2}" />
-
-                <label for="email">E-mail: </label>
-                <input type="email" name="email" size="20" placeholder="email@dominio.com" />
-            </div>
-
-            <div class="form-inline">
-                <label for="sexo" id="form-inline">Sexo: </label>
-                <input type="radio" name="sexo" value="masculino" checked="checked">Masculino
-                <input type="radio" name="sexo" value="feminino">Feminino<br>
-            </div>
-
-            <div class="form-inline">
-                <label for="date">Data de Nascimento: </label>
-                <input type="date" maxlength="10" name="date" pattern="[0-9]{2}\[0-9]{2}\[0-9]{4}$" min="2012-01-01"
-                    max="2014-02-18" />
-
-                <label for="estado-civil">Estado Civil: </label>
-                <select name="Estado Civil" id="estado-civil">
-                    <option value="Solteiro">Solteiro</option>
-                    <option value="Casado">Casado</option>
-                    <option value="Divorciado">Divorciado</option>
-                    <option value="viuvo">Viúvo</option>
-                </select>
-            </div>
-
-            <label for="endereço">Endereço: </label>
-            <div class="form-inline">
-                <input type="text" id="endereço" name="endereço" placeholder="Rua, Cidade - UF" pattern="[a-z\s]+$" />
-                <input type="number" name="cep" size="8" required placeholder="CEP: xxxxx-xxx"
-                    pattern="[0-9]{5}-[0-9]{3}" />
-            </div>
-
-            <label for="profissao">Profissão: </label>
-            <input type="text" id="profissao" name="letras" placeholder="Estilista" pattern="[a-z\s]+$" />
-
-            <label for="letras">Apenas Letras: </label>
-            <input type="text" id="letras" name="letras" placeholder="somente letras...." pattern="[a-z\s]+$" />
-
-            <label for="phone">Telefone: </label>
-            <input type="tel" id="phone" name="phone" required placeholder="(xx) xxxxx-xxxx"
-                pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{4}" />
-
-            <label for="obs">Observação:</label>
-            <input name="obs" id="obs" required placeholder="Faça sua observação"></input>
-
-            <button type="submit" class="btn">Criar Conta</button>
-
-        </form>
-    </div>
-</main>
 
 </html>
