--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
                     <h3>Letícia Alves</h3>
                     <h6>São Paulo</h6>
-                    <p>Estudante da UFES e <br />futura desenvolvedora front-end</p>
+                    <p>Estudante da UFES</p>
                     <div class="buttons">
                         <button class="primary">
                             Sistemas de Informação
