--- a/html/home.html
+++ b/html/home.html
@@ -65,7 +65,12 @@
     </div>
 
     <main class="conteudo">
-       
+        <div class="produtos">
+            <img src="/Caltech/imagens/Camisa/big-bang-theory-1.jpeg">
+            <img src="/Caltech/imagens/Acessórios/almofada-naruto(frente).jpg">
+            <img src="/Caltech/imagens/Moletom/dragon-ball.jpg">
+            <img src="/Caltech/imagens/Calças/Masculinas/reta(frente).jpg">
+        </div>
     </main>
     <footer class="rodape">
         <img class="rodape-imagem" />
