--- a/html/home.html
+++ b/html/home.html
@@ -66,10 +66,9 @@
 
     <main class="conteudo">
         <div class="produtos">
-            <img src="/Caltech/imagens/Camisa/big-bang-theory-1.jpeg">
-            <img src="/Caltech/imagens/Acessórios/almofada-naruto(frente).jpg">
-            <img src="/Caltech/imagens/Moletom/dragon-ball.jpg">
-            <img src="/Caltech/imagens/Calças/Masculinas/reta(frente).jpg">
+            <a href="camisas.html"> <img src="/Caltech/imagens/Camisa/big-bang-theory-1.jpeg">
+            <a href="acessorios.html"> <img src="/Caltech/imagens/Acessórios/almofada-naruto(frente).jpg">
+            <a href="moletom.html"> <img src="/Caltech/imagens/Moletom/dragon-ball.jpg">
         </div>
     </main>
     <footer class="rodape">
