--- a/html/faleConosco.html
+++ b/html/faleConosco.html
@@ -74,7 +74,7 @@
                 </div>
 
                 <label for="mensagem">Digite sua mensagem:</label>
-                <input name="mensagem" id="mensagem" required placeholder="Mensagem..."></input>
+                <textarea name="mensagem" required placeholder="Mensagem..."></textarea>
 
                 <div class="form-inline">
                     <button type="submit" class="btn">Enviar Mensagem</button>
