--- a/index.html
+++ b/index.html
@@ -94,21 +94,9 @@
             </div>
             <div id="descricao">
                 <div class="detalhes">
-                    <p style="color:white; padding: 30px;">Nosso trabalho foi focado em produtos geek, os quais hoje em
-                        dia estão em
-                        alta
-                        pelos crianças e
-                        jovens,
-                        além de possuir uma taxa rentável no mercado têxtil. Este trabalho em si, foi de certo modo,
-                        difícil
-                        de
-                        ser feito devido algumas limitações da tecnologias HTML e CSS mas ainda sim, foi possível
-                        extrair o
-                        potencial máximo destas.
-                        Apesar de serem ferramentas não programáveis, continuam sendo pilares importantes para a
-                        construção
-                        não
-                        apenas deste site, mas de muitos outros existentes.
+                    <p style="color:white; padding: 30px;"> O Projeto de site tem como público alvo o grupo de geek, em que usamosapenas
+                    o HTML e o CSS, tivemos como dificuldade a aplicação da responsividade sem o uso de frameworks
+                    
                     </p>
                 </div>
             </div>
