--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menu-expansivo" id="menu-card">
             <div id="hide-container">
                 <div class="card-container">
-                    <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%"/>
+                    <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
                     <h3>Letícia Alves</h3>
                     <h6>São Paulo</h6>
                     <p>Estudante da UFES</p>
@@ -66,7 +66,7 @@
                     <img class="round" src="../imagens/estudante-2.jpg" alt="user" style="width:50%" />
                     <h3>Bryan Cantanheides</h3>
                     <h6>Espírito Santo</h6>
-                    <p>Estudante da UFES e <br /> futuro desenvolvedor front-end</p>
+                    <p>Estudante da UFES</p>
                     <div class="buttons">
                         <button class="primary">
                             Sistemas de Informação
