--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
             </div>
             <div id="descricao">
                 <div class="detalhes">
-                    <p style="color:white; padding: 30px;"> O Projeto de site tem como público alvo o grupo de geek, em que usamosapenas
-                    o HTML e o CSS, tivemos como dificuldade a aplicação da responsividade sem o uso de frameworks
-                    
+                    <p style="color:white; padding: 30px;"> O Projeto de site tem como público alvo o grupo de geek, em
+                        que usamos apenas
+                        o HTML e o CSS, tivemos como dificuldade a aplicação da responsividade sem o uso de frameworks
+
                     </p>
                 </div>
             </div>
