--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Caltech Wear</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
-    <link rel="shortcut icon" href="../imagens/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,600;1,200;1,400;1,600&display=swap"
         rel="stylesheet" />
@@ -17,12 +17,12 @@
     <div class="conteudo">
         <div class="imageBox">
             <div class="top-img">
-                <a href="../html/home.html">
+                <a href="html/home.html">
                     <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
                 </a>
             </div>
             <div class="hover-img">
-                <a href="../html/home.html">
+                <a href="html/home.html">
                     <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
                 </a>
             </div>
@@ -39,7 +39,7 @@
         <div class="menu-expansivo" id="menu-card">
             <div id="hide-container">
                 <div class="card-container">
-                    <img class="round" src="../imagens/estudante-1.jpg" alt="user" style="width:50%" />
+                    <img class="round" src="imagens/estudante-1.jpg" alt="user" style="width:50%" />
                     <h3>Letícia Alves</h3>
                     <h6>São Paulo</h6>
                     <p>Estudante da UFES</p>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="card-container">
-                    <img class="round" src="../imagens/estudante-2.jpg" alt="user" style="width:50%" />
+                    <img class="round" src="imagens/estudante-2.jpg" alt="user" style="width:50%" />
                     <h3>Bryan Cantanheides</h3>
                     <h6>Espírito Santo</h6>
                     <p>Estudante da UFES</p>
