--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div class="imageBox">
             <div class="top-img">
                 <a href="html/home.html">
-                    <img class="round aligncenter" src="../imagens/logo-branco.png" style="width: 30%;" />
+                    <img class="round aligncenter" src="imagens/logo-branco.png" style="width: 30%;" />
                 </a>
             </div>
             <div class="hover-img">
                 <a href="html/home.html">
-                    <img class="round aligncenter" src="../imagens/pag-inicial.png" style="width: 30%;" />
+                    <img class="round aligncenter" src="imagens/pag-inicial.png" style="width: 30%;" />
                 </a>
             </div>
         </div>
